# aoc

./: LICENSE  README.md
2023/: .gitignore  CMakeLists.txt
2023/includes/: env.hpp.in
2023/includes/aoc/: aoc.hpp
2023/includes/aoc/aoc/: aoc.hpp  daily.hpp
2023/scripts/: configure.sh
2023/src/: aoc.cpp  day01.cpp  day02.cpp  main.cpp
aoc24/: build.gradle.kts
aoc24/gradle/wrapper/: gradle-wrapper.properties
aoc24/src/main/kotlin/: Day01.kt  Day02.kt  Main.kt  Problem.kt
aoc24/src/main/kotlin/collections/: ListQueue.kt  Queue.kt
aoc24/src/main/kotlin/math/graph/: AdiacenceList.kt  AdjacencyList.kt  Node.kt  graph.kt
aoc24/src/main/kotlin/math/graph/iterators/: AdiacenceListBreadth.kt  AdjacencyListBreadth.kt  iterables.kt  iterators.kt
aoc24/src/main/kotlin/math/graph/strategies/: SimpleStrategy.kt  VisitStrategy.kt  VisitedSetStrategy.kt
aoc24/src/main/kotlin/math/vectors/: Vec2.kt
aoc24/src/main/kotlin/problems/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Problem.kt
aoc24/src/test/kotlin/math/graph/: AdjacencyListBreadthIteratorTest.kt  AdjacencyListTest.kt  NodeTest.kt
aoc24/src/test/kotlin/problems/: GraphTests.kt
aoc25/: .gitignore  Makefile  aoc25.sln
aoc25/src/AOC25/: Program.cs
aoc25/src/AOC25/Problems/: Daily.cs  Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs
